[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-domain-mapper"
version = "0.1.0"
description = "Map enterprise corporate structures to enrichable domains"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GTM Layer", email = "hello@gtmlayer.com"},
]
keywords = ["enterprise", "enrichment", "abm", "domains", "subsidiaries", "sales"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "responses>=0.23.0",
]

[project.scripts]
domain-mapper = "domain_mapper.cli:main"

[project.urls]
Homepage = "https://github.com/gtmlayer/enterprise-domain-mapper"
Repository = "https://github.com/gtmlayer/enterprise-domain-mapper"
Issues = "https://github.com/gtmlayer/enterprise-domain-mapper/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
